# xtalui

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  cu_fcc.cif  diamond_cubic.cif  fe_bcc.cif  gaas_zincblende.cif  graphite_hexagonal.cif  mg_hcp.cif  sic_zincblende.cif  silicon_diamond.cif
src/atomtui/: __main__.py  app.py  cli.py  renderer.py  scene.py
src/xtalui/: __init__.py  __main__.py  abacus_stru.py  app.py  cli.py  renderer.py  scene.py
src/xtalui/plot/: __init__.py  app.py  cli.py  parser.py  renderer.py
tests/: test_app.py  test_cli.py  test_plot.py  test_renderer.py
