[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xtalui"
version = "0.1.0"
description = "Terminal crystal structure viewer with ASCII and Unicode rendering"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{email = "zhubonan@outlook.com"}]
keywords = ["ase", "ascii", "chemistry", "crystal", "terminal", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "ase>=3.23",
    "numpy>=1.24",
    "prompt_toolkit>=3.0",
    "spglib>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
xtal = "xtalui.cli:main"

[project.urls]
Homepage = "https://github.com/bonan-group/xtalui"
Repository = "https://github.com/bonan-group/xtalui"
Issues = "https://github.com/bonan-group/xtalui/issues"
Releases = "https://github.com/bonan-group/xtalui/releases"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
